<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddCryptogramFragment">

    <TextView
        android:id="@+id/labelPlayerFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/player_first_name_label"
        app:layout_constraintBottom_toBottomOf="@id/txtPlayerFirstName"
        app:layout_constraintEnd_toStartOf="@id/txtPlayerFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtPlayerFirstName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtPlayerFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="8dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/txtPlayerLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelPlayerFirstName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/labelLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/player_last_name_label"
        app:layout_constraintBottom_toBottomOf="@id/txtPlayerLastName"
        app:layout_constraintEnd_toStartOf="@id/txtPlayerLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtPlayerLastName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtPlayerLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/txtPlayerFirstName"
        app:layout_constraintTop_toBottomOf="@id/txtPlayerFirstName"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/labelUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/username_label"
        app:layout_constraintBottom_toBottomOf="@id/txtPlayerUsername"
        app:layout_constraintEnd_toStartOf="@id/txtPlayerUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtPlayerUsername"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtPlayerUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/txtPlayerFirstName"
        app:layout_constraintTop_toBottomOf="@id/txtPlayerLastName"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/password_label"
        app:layout_constraintBottom_toBottomOf="@id/txtPlayerPassword"
        app:layout_constraintEnd_toStartOf="@id/txtPlayerPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtPlayerPassword"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtPlayerPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textVisiblePassword|textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/txtPlayerFirstName"
        app:layout_constraintTop_toBottomOf="@id/txtPlayerUsername"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/txtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/category_label"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/categorySpinner"
        app:layout_constraintEnd_toStartOf="@id/txtPlayerFirstName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/categorySpinner" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/category_items"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/txtCategory"
        app:layout_constraintTop_toBottomOf="@id/txtPlayerPassword"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/addPlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/add_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>